feat: Create a product creation route
